feat: /album/data のAPIスキーマを追加
