# packages/core/src/generated-msr/apis/AlbumApi.ts
@@ -17,6 +17,37 @@ import { AlbumsResponse } from '../models/AlbumsResponse.ts';
 export class AlbumApiRequestFactory extends BaseAPIRequestFactory {
 
     /**
+     * 指定したアルバムの楽曲を除いた詳細データを取得
+     * @param cid アルバムの cid
+     */
+    public async albumCidDataGet(cid: string, _options?: Configuration): Promise<RequestContext> {
+        let _config = _options || this.configuration;
+
+        // verify required parameter 'cid' is not null or undefined
+        if (cid === null || cid === undefined) {
+            throw new RequiredError("AlbumApi", "albumCidDataGet", "cid");
+        }
+
+
+        // Path Params
+        const localVarPath = '/album/{cid}/data'
+            .replace('{' + 'cid' + '}', encodeURIComponent(String(cid)));
+
+        // Make Request Context
+        const requestContext = _config.baseServer.makeRequestContext(localVarPath, HttpMethod.GET);
+        requestContext.setHeaderParam("Accept", "application/json, */*;q=0.8")
+
+
+        
+        const defaultAuth: SecurityAuthentication | undefined = _options?.authMethods?.default || this.configuration?.authMethods?.default
+        if (defaultAuth?.applySecurityAuthentication) {
+            await defaultAuth?.applySecurityAuthentication(requestContext);
+        }
+
+        return requestContext;
+    }
+
+    /**
      * 指定したアルバムの収録楽曲一覧を取得
      * @param cid アルバムの cid
      */
@@ -73,6 +104,35 @@ export class AlbumApiRequestFactory extends BaseAPIRequestFactory {
 }
 
 export class AlbumApiResponseProcessor {
+
+    /**
+     * Unwraps the actual response sent by the server from the response context and deserializes the response content
+     * to the expected objects
+     *
+     * @params response Response returned by the server for a request to albumCidDataGet
+     * @throws ApiException if the response code was not in [200, 299]
+     */
+     public async albumCidDataGetWithHttpInfo(response: ResponseContext): Promise<HttpInfo<AlbumDetailResponse >> {
+        const contentType = ObjectSerializer.normalizeMediaType(response.headers["content-type"]);
+        if (isCodeInRange("200", response.httpStatusCode)) {
+            const body: AlbumDetailResponse = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "AlbumDetailResponse", ""
+            ) as AlbumDetailResponse;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        // Work around for missing responses in specification, e.g. for petstore.yaml
+        if (response.httpStatusCode >= 200 && response.httpStatusCode <= 299) {
+            const body: AlbumDetailResponse = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "AlbumDetailResponse", ""
+            ) as AlbumDetailResponse;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        throw new ApiException<string | Blob | undefined>(response.httpStatusCode, "Unknown API Status Code!", await response.getBodyAsAny(), response.headers);
+    }
 
     /**
      * Unwraps the actual response sent by the server from the response context and deserializes the response content
