# packages/core/src/generated-msr/models/AlbumDataResponse.ts
@@ -1,0 +1,50 @@
+/**
+ * (c) MONSTER SIREN RECORD
+ * MSR original soundtrack website\'s schema https://monster-siren.hypergryph.com 
+ *
+ * OpenAPI spec version: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { AlbumData } from '../models/AlbumData.ts';
+import { HttpFile } from '../http/http.ts';
+
+export class AlbumDataResponse {
+    'code': number;
+    'msg': string;
+    'data': AlbumData;
+
+    static readonly discriminator: string | undefined = undefined;
+
+    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
+        {
+            "name": "code",
+            "baseName": "code",
+            "type": "number",
+            "format": ""
+        },
+        {
+            "name": "msg",
+            "baseName": "msg",
+            "type": "string",
+            "format": ""
+        },
+        {
+            "name": "data",
+            "baseName": "data",
+            "type": "AlbumData",
+            "format": ""
+        }    ];
+
+    static getAttributeTypeMap() {
+        return AlbumDataResponse.attributeTypeMap;
+    }
+
+    public constructor() {
+    }
+}
+
